<resources>
    <string name="app_name">NØIR</string>

    <!-- Toolbar & Navigation -->
    <string name="products">Продукти</string>
    <string name="profile">Профил</string>
    <string name="about">За нас</string>
    <string name="logout">Изход</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="open_cart">Отвори количката</string>
    <string name="your_cart">Вашата количката</string>

    <!-- Authentication fields -->
    <string name="name">Име:</string>
    <string name="email_hint">Имейл:</string>
    <string name="password_hint">Парола:</string>
    <string name="register_text">Нямаш акаунт? Регистрирай се</string>
    <string name="login_title">Вход</string>
    <string name="register_se">Регистрирай се</string>
    <string name="my_profile">Моят профил</string>

    <!-- UI Text -->
    <string name="welcome">Добре дошъл!</string>
    <string name="find_your_style">Открий своя стил</string>
    <string name="buy">Купи</string>

    <!-- Errors -->
    <string name="error_invalid_credentials">Невалидни данни за вход</string>
    <string name="error_empty_fields">Попълни всички полета</string>

    <!-- Cart -->
    <string name="cart">Количка</string>
    <string name="total">Общо:</string>
    <string name="cart_history">История на поръчките</string>
    <string name="price">Цена</string>
    <string name="description">Описание</string>
    <string name="shape_hint">Форма (напр. Авиатор)</string>
    <string name="link_to_img">Линк към изображение (URL)</string>
    <string name="prelook_of_img">Прегледай изображението</string>
    <string name="choose_category">Изберете категория:</string>
    <string name="choose_manufacturer">Изберете производител:</string>
    <string name="save">Запази</string>
    <string name="delivery_address">Адрес за доставка</string>
    <string name="phone_number">Телефонен номер</string>
    <string name="remove">Премахни</string>
    <string name="product">Продукт</string>
    <string name="whole_price">Обща сума: 0 лв.</string>
    <string name="your_orders">Твоите поръчки ще се покажат тук</string>
    <string name="cart_list">Списък с продукти в количката</string>
    <string name="product_details">Детайли за продукта</string>
    <string name="back">Back</string>
    <string name="product_img">Product Image</string>
    <string name="product_name">Продуктово име</string>
    <string name="product_price">Цена: 0.00 лв</string>
    <string name="product_description">Описание на продукта</string>
    <string name="product_manufacturer">Производител:</string>
    <string name="add_to_cart">Добави в количката</string>
    <string name="try_on">Пробвай</string>
    <string name="write_your_opinion">Напишете вашето мнение...</string>
    <string name="add_review">Добави отзив</string>
    <string name="redact">Редактирай</string>

    <string name="our_products">Нашите продукти</string>
    <string name="search_glasses">Търси очила...</string>
    <string name="add_product">Добави продукт</string>
    <string name="sort">Сортирай</string>
    <string name="filter">Филтрирай</string>
    <string name="back_footer">◀</string>
    <string name="page">Страница 1</string>
    <string name="forward">▶</string>
    <string name="product_list">Продукти, които (може би) искаш</string>


    <string name="we_are">Ние сме NØIR</string>
    <string name="idea">NOIR е създаден с идеята да комбинира мода, комфорт и достъпност...</string>
    <string name="mission">Нашата мисия</string>
    <string name="description1">Да предоставим висококачествени очила на достъпна цена...</string>
    <string name="contact">Контакт</string>
    <string name="address_hint">📍 София, ул. &#39;Проф. Георги Брадистилов&#39; 11\ncontact@glassesstore.bg</string>
    <string name="phone_num">📞 +359 888 123 456</string>
    <string name="follow_us">Последвайте ни</string>
    <string name="location">Локация</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>


    <string name="name_product">Име на продукта</string>
    <string name="price_product">0.00 лв</string>

    <string name="about_us">За нас</string>
    <string name="promo_text">Открий своя стил с нашите модерни очила. Качество, комфорт и дизайн на едно място!</string>

</resources>