<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_add_product"
    android:fillViewport="true">

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <!-- Boxes -->
        <EditText
            android:id="@+id/editName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:fontFamily="@font/rubik_glitch_regular" />

        <EditText
            android:id="@+id/editPrice"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:fontFamily="@font/rubik_glitch_regular" />

        <EditText
            android:id="@+id/editDescription"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:fontFamily="@font/rubik_glitch_regular" />

        <EditText
            android:id="@+id/editForm"
            android:hint="@string/shape_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:fontFamily="@font/rubik_glitch_regular" />

        <EditText
            android:id="@+id/editImageUrl"
            android:hint="@string/link_to_img"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_input"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="12dp"
            android:minHeight="48dp"
            android:fontFamily="@font/rubik_glitch_regular" />

        <Button
            android:id="@+id/btnPreviewImage"
            android:text="@string/prelook_of_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MonoButton.Beautiful"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp" />

        <!-- Category -->
        <ImageView
            android:id="@+id/selectedImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_category"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/rubik_glitch_regular"
            android:layout_marginBottom="0dp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp" />

        <!-- Manufacturer -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_manufacturer"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/rubik_glitch_regular"
            android:layout_marginBottom="0dp" />

        <Spinner
            android:id="@+id/spinnerManufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp" />

        <!-- Save -->
        <Button
            android:id="@+id/btnSave"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MonoButton.Beautiful"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
</ScrollView>
