<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@null" />

    <!--  Blur Overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000" />

    <!-- Content -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cart_list"
            android:elevation="0dp"
            android:paddingTop="24dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_cart"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:fontFamily="@font/rubik_glitch_regular"
                android:layout_gravity="center_horizontal" />
        </androidx.appcompat.widget.Toolbar>

        <!--  Cart Items -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/cart_list" />

        <!-- Whole price -->
        <TextView
            android:id="@+id/totalAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole_price"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/rubik_glitch_regular"
            android:layout_marginBottom="12dp" />

        <!-- Button -->
        <Button
            android:id="@+id/buyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            style="@style/MonoButton.Beautiful"
            android:backgroundTint="#E4C89B"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>
